# AI-Lawyer

./: .gitignore  README.md  pyproject.toml
src/backend/: rag_pipeline.py  vector_db.py
src/frontend/: frontend.py
vectorstore/db_faiss/: index.faiss  index.pkl
